[package]
name = "dfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
ctrlc = {version = "3.4.5", features = ["termination"]}
libp2p = { version = "0.56.0", features = ["full"]}
serde = { version = "1.0.219", features = ["default", "serde_derive"]}
thiserror = "2.0.11"
tokio = { version = "1.46.1", features = ["full"]}
tokio-util = "0.7.13"